--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         rel="stylesheet">
     <!-- Swiper CSS -->
     <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
+
         /* HEADER */
         #mainHeader {
             transition: all 0.3s ease;
