--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             .form-placeholder {
                 margin-top: 35px;
                 min-height: 380px;
+                max-width: 500px !important;
             }
         }
 
@@ -120,6 +121,7 @@
             .form-placeholder {
                 min-height: 300px;
                 border-radius: 14px;
+                max-width: 500px !important;
             }
         }
     </style>
@@ -756,7 +758,8 @@
                 <!-- Left -->
                 <div class="d-flex align-items-center gap-3">
                     <img src="assets/img/Footer_Phone Icon.svg" alt="">
-                    <span style="font-size: 22px; font-weight: 600;">1800 102 5661</span>
+                    <a href="tel:18001025661" style="text-decoration: none; color: #000;"><span
+                            style="font-size: 22px; font-weight: 600;">1800 102 5661</span></a>
                 </div>
 
                 <!-- Center Logo -->
@@ -790,7 +793,7 @@
                 </div>
 
                 <!-- RIGHT EMPTY FORM SPACE -->
-                <div class="col-lg-5">
+                <div class="col-lg-5 d-flex justify-content-center align-items-center mt-4 mt-lg-0">
                     <div class="form-placeholder">
                         <div id="lsq-portal-widget-c5fac472-f559-11ed-9135-0a5db97dc116-8fb55526-1a8c-47cd-ae16-a9dfad480f02"
                             class="lsq-portal-widget lsq-form-widget">
@@ -1115,14 +1118,14 @@
                 <!-- LEFT SIDE CONTENT -->
                 <div class="col-lg-4">
                     <h2 class="recruiter-heading text-primary mb-4 d-none d-lg-block">
-                        Top Recruiters<br>Are Ready<br>for You
+                        Top Recruiters<br>visiting<br>SGT University
                     </h2>
 
                     <div class="row g-3 stats-block">
 
                         <div class="col-6 col-sm-4 col-lg-12">
                             <div class="stat-item">
-                                <h3>23 LPA</h3>
+                                <h3>42 LPA</h3>
                                 <p>Highest Package</p>
                             </div>
                         </div>
@@ -1374,7 +1377,7 @@
 
             <!-- Logos Full Width Image -->
             <div class="collab-logos-wrapper">
-                <img src="assets/img/international-collaboration-logos.webp" alt="International Collaborations"
+                <img src="assets/img/international-Collaboration-Logos.webp" alt="International Collaborations"
                     class="img-fluid collab-logos">
             </div>
 
@@ -1476,7 +1479,7 @@
 
             <!-- Admission Process Image -->
             <div class="admission-process-img">
-                <img src="assets/img/admission-process.webp" alt="Admission Process" class="img-fluid">
+                <img src="assets/img/Admission-process.webp" alt="Admission Process" class="img-fluid">
             </div>
 
         </div>
@@ -1534,7 +1537,8 @@
 
                         <li class="d-flex align-items-center gap-2">
                             <img src="assets/img/Footer_Phone Icon.svg" alt="">
-                            <span>1800 102 5661</span>
+                            <a href="tel:18001025661" style="text-decoration: none; color: #000;"><span>1800 102
+                                    5661</span></a>
                         </li>
 
                         <li class="d-flex align-items-center gap-2">
@@ -1549,11 +1553,16 @@
                 <div class="col-lg-3 text-lg-end text-md-start">
                     <div class="footer-social d-flex justify-content-lg-end gap-3">
 
-                        <a href="#"><img src="assets/img/FB.svg" alt="Facebook"></a>
-                        <a href="#"><img src="assets/img/Instagram.svg" alt="Instagram"></a>
-                        <a href="#"><img src="assets/img/linkedin.svg" alt="LinkedIn"></a>
-                        <a href="#"><img src="assets/img/youtube.svg" alt="YouTube"></a>
-                        <a href="#"><img src="assets/img/twitter-x.webp" alt="Twitter"></a>
+                        <a href="https://www.facebook.com/sgtuniversitygurgaon"><img src="assets/img/FB.svg"
+                                alt="Facebook"></a>
+                        <a href="https://www.instagram.com/sgtuniversity/"><img src="assets/img/Instagram.svg"
+                                alt="Instagram"></a>
+                        <a href="https://www.linkedin.com/school/sgt-university/"><img src="assets/img/linkedin.svg"
+                                alt="LinkedIn"></a>
+                        <a href="http://www.youtube.com/@SGTUniversityGurgaonNCR"><img src="assets/img/youtube.svg"
+                                alt="YouTube"></a>
+                        <a href="https://twitter.com/SGTUniversity"><img src="assets/img/twitter-x.webp"
+                                alt="Twitter"></a>
 
                     </div>
                 </div>
