--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- Bootstrap CSS -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="assets/css/main.css" rel="stylesheet">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css" />
@@ -39,8 +41,8 @@
 
         /* ===== HERO BASE ===== */
         .hero-section {
-            min-height: 100vh;
-            padding: 250px 0 80px;
+            min-height: 80vh;
+            padding: 200px 0 40px;
             background: url("assets/img/Banner-image.webp") center center / cover no-repeat;
             position: relative;
             overflow: hidden;
@@ -52,7 +54,7 @@
             inset: 0;
             background: linear-gradient(to bottom,
                     rgba(255, 255, 255, 0.55),
-                    rgba(3, 3, 3, 0.65));
+                    rgba(3, 3, 3, 0));
         }
 
         .hero-section .container {
@@ -90,7 +92,6 @@
             .form-placeholder {
                 margin-top: 35px;
                 min-height: 380px;
-                max-width: 500px !important;
             }
         }
 
@@ -541,6 +542,8 @@
     <style>
         .testimonial-section {
             background: #fff;
+            padding-top: 60px;
+            padding-bottom: 60px;
         }
 
         /* Card */
@@ -551,12 +554,32 @@
             color: #fff;
         }
 
+        /* Row for each testimonial */
+        .testimonial-row {
+            display: flex;
+            flex-direction: row;
+            /* desktop: image left, text right */
+            align-items: center;
+            gap: 20px;
+        }
+
+        /* Image wrapper */
+        .testimonial-img-wrapper {
+            flex: 0 0 220px;
+            text-align: center;
+        }
+
         /* Image */
         .testimonial-img {
             width: 220px;
             height: 220px;
             border-radius: 50%;
             object-fit: cover;
+        }
+
+        /* Text wrapper */
+        .testimonial-text-wrapper {
+            flex: 1;
         }
 
         /* Text */
@@ -596,11 +619,23 @@
             color: #fff;
         }
 
-        /* Mobile */
+        /* ================= MOBILE ================= */
         @media (max-width: 767px) {
-            .testimonial-card {
-                padding: 24px;
+
+            .testimonial-row {
+                flex-direction: column;
+                /* stack image above text */
                 text-align: center;
+            }
+
+            .testimonial-img-wrapper {
+                margin-bottom: 16px;
+            }
+
+            .testimonial-img {
+                width: 140px;
+                height: 140px;
+                margin: 0 auto;
             }
 
             .testimonial-text {
@@ -629,6 +664,9 @@
         .future-leaders-section {
             min-height: 850px;
             background: #ffffff;
+            position: relative;
+            overflow: hidden;
+            /* prevents images from covering other content */
         }
 
         /* Blue semi-circle */
@@ -641,6 +679,8 @@
             min-height: 310px;
             max-width: 80%;
             z-index: 1;
+            pointer-events: none;
+            /* ensures images don't block clicks */
         }
 
         /* Building image */
@@ -651,8 +691,10 @@
             transform: translateX(-50%);
             width: 100%;
             max-width: 100%;
-            z-index: 2;
             min-height: 310px;
+            z-index: 2;
+            pointer-events: none;
+            /* ensures images don't block clicks */
         }
 
         /* Ensure text stays above images */
@@ -1387,10 +1429,9 @@
     <section class="py-5 testimonial-section">
         <div class="container">
 
-            <!-- Heading + Arrows -->
+            <!-- Heading + Navigation -->
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h2 class="fw-bold text-primary mb-0">Student Testimonials</h2>
-
                 <div class="testimonial-nav">
                     <div class="swiper-button-prev testimonial-prev"></div>
                     <div class="swiper-button-next testimonial-next"></div>
@@ -1402,15 +1443,18 @@
                 <div class="swiper-wrapper">
 
                     <!-- Slide 1 -->
-                    <div class="swiper-slide p-5">
+                    <div class="swiper-slide">
                         <div class="testimonial-card">
-                            <div class="row align-items-center g-4">
+                            <div class="testimonial-row">
 
-                                <div class="col-md-3 text-center">
-                                    <img src="assets/img/dr_divya_tayal_1.webp" class="testimonial-img" alt="">
+                                <!-- Image -->
+                                <div class="testimonial-img-wrapper">
+                                    <img src="assets/img/dr_divya_tayal_1.webp" class="testimonial-img"
+                                        alt="Dr. Divya Tayal">
                                 </div>
 
-                                <div class="col-md-9">
+                                <!-- Text -->
+                                <div class="testimonial-text-wrapper">
                                     <h5 class="fw-bold mb-2 text-white">Dr. Divya Tayal</h5>
                                     <p class="testimonial-text">
                                         My vision came alive effortlessly. Their blend of casual and professional
@@ -1423,8 +1467,7 @@
                                         perspectives
                                         on global healthcare systems. SGT nurtures socially responsible leaders." made
                                         the
-                                        process a breeze. Creativity flowed, and the results were beyond my
-                                        expectations.
+                                        process a breeze. Creativity flowed, and the results were beyond my expectations
                                     </p>
                                 </div>
 
@@ -1433,15 +1476,18 @@
                     </div>
 
                     <!-- Slide 2 -->
-                    <div class="swiper-slide p-5">
+                    <div class="swiper-slide">
                         <div class="testimonial-card">
-                            <div class="row align-items-center g-4">
+                            <div class="testimonial-row">
 
-                                <div class="col-md-3 text-center">
-                                    <img src="assets/img/dr_divya_tayal_1.webp" class="testimonial-img" alt="">
+                                <!-- Image -->
+                                <div class="testimonial-img-wrapper">
+                                    <img src="assets/img/dr_divya_tayal_1.webp" class="testimonial-img"
+                                        alt="Rahul Sharma">
                                 </div>
 
-                                <div class="col-md-9">
+                                <!-- Text -->
+                                <div class="testimonial-text-wrapper">
                                     <h5 class="fw-bold mb-2 text-white">Rahul Sharma</h5>
                                     <p class="testimonial-text">
                                         My vision came alive effortlessly. Their blend of casual and professional
@@ -1454,8 +1500,7 @@
                                         perspectives
                                         on global healthcare systems. SGT nurtures socially responsible leaders." made
                                         the
-                                        process a breeze. Creativity flowed, and the results were beyond my
-                                        expectations.
+                                        process a breeze. Creativity flowed, and the results were beyond my expectations
                                     </p>
                                 </div>
 
@@ -1463,11 +1508,17 @@
                         </div>
                     </div>
 
+                    <!-- Add more slides as needed -->
+
                 </div>
+                <div class="swiper-pagination mt-4"></div>
             </div>
 
         </div>
     </section>
+
+
+
     <section class="admission-process-section py-5">
         <div class="container text-center">
 
@@ -1501,8 +1552,11 @@
 
             <div class="d-flex justify-content-center align-items-center gap-2 text-white fw-semibold">
                 <img src="assets/img/Phone-Icon_Footer.svg" alt="">
-                <span class="fs-1">1800 102 5661</span>
+                <a href="tel:18001025661" class="fs-1 d-inline-block text-white text-decoration-none">
+                    1800 102 5661
+                </a>
             </div>
+
 
         </div>
 
