--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
         </div>
     </section>
 
-    <section class="disciplines-section py-5">
+    <section class="disciplines-section pt-5">
         <div class="container">
 
             <!-- Heading -->
@@ -986,7 +986,7 @@
                         <li>Design</li>
                         <li>Hotel & Tourism Management</li>
                         <li>Law</li>
-                        <li>Applied and Basic Sciences</li>
+                        <li>Basic and Applied Sciences</li>
                         <li>Humanities, Social Sciences & Liberal Arts</li>
                         <li>Emerging Media, Communication and Film Studies</li>
                     </ul>
