--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             font-family: 'Poppins', sans-serif;
         }
 
+        .text-p1 {
+            color: #134080;
+        }
+
         /* HEADER */
         #mainHeader {
             transition: all 0.3s ease;
@@ -218,6 +222,7 @@
             color: #42526e;
             font-weight: 500;
             font-size: 15px;
+            color: #000;
         }
 
         .disciplines-img {
@@ -234,6 +239,7 @@
 
             .discipline-list {
                 margin-bottom: 20px;
+                color: #000;
             }
 
             .discipline-list li {
@@ -799,18 +805,18 @@
 
                 <!-- Left -->
                 <div class="d-flex align-items-center gap-3">
-                    <img src="assets/img/Footer_Phone Icon.svg" alt="">
-                    <a href="tel:18001025661" style="text-decoration: none; color: #000;"><span
-                            style="font-size: 22px; font-weight: 600;">1800 102 5661</span></a>
+                    <div class="text-center">
+                        <img src="assets/img/SGT Logo.svg" height="65" alt="SGT University">
+                    </div>
                 </div>
 
                 <!-- Center Logo -->
-                <div class="text-center">
+                <!-- <div class="text-center">
                     <img src="assets/img/SGT Logo.svg" height="65" alt="SGT University">
-                </div>
+                </div> -->
 
                 <!-- Right -->
-                <a href="#" class="btn btn-primary rounded-3 px-4">Login</a>
+                <a href="#" class="btn btn-primary rounded-3 px-4">Apply Now</a>
 
             </div>
         </div>
@@ -925,11 +931,11 @@
 
                 <!-- LEFT CONTENT -->
                 <div class="col-lg-9">
-                    <h2 class="fw-bold text-primary mb-3">
+                    <h2 class="fw-bold text-p1 mb-3">
                         About SGT University
                     </h2>
 
-                    <p class="text-muted mb-0">
+                    <p class="text-black mb-0">
                         Accredited with an <strong>A+ grade by NAAC</strong>, SGT University is a distinguished
                         institution committed to “Nurturing Future Leaders” through academic excellence,
                         research, and industry-driven innovation. With <strong>19 faculties offering
@@ -949,16 +955,16 @@
         </div>
     </section>
 
-    <section class="disciplines-section pt-4">
+    <section class="disciplines-section pt-4-">
         <div class="container">
 
             <!-- Heading -->
             <div class="row mb-4">
                 <div class="col-lg-8">
-                    <h2 class="fw-bold text-primary">
+                    <h2 class="fw-bold text-p1">
                         Multiple Disciplines, Infinite Possibilities
                     </h2>
-                    <p class="text-muted">
+                    <p class="text-black">
                         With 19 dynamic faculties, SGTU empowers students with endless opportunities.
                     </p>
                 </div>
@@ -1018,7 +1024,7 @@
     <section class="ranking-section py-5">
         <div class="container">
             <!-- Section Title -->
-            <h2 class="fw-bold text-primary mb-5">
+            <h2 class="fw-bold text-p1 mb-5">
                 Ranking &amp; Achievements
             </h2>
 
@@ -1108,7 +1114,7 @@
     <section class="admissions-section py-5">
         <div class="container">
 
-            <h2 class="fw-bold text-primary mb-4">
+            <h2 class="fw-bold text-p1 mb-4">
                 Admissions Open for 2026–27
             </h2>
 
@@ -1122,7 +1128,7 @@
                 <!-- RIGHT CONTENT -->
                 <div class="col-lg-6 admissions-content">
 
-                    <h3 class="fw-bold text-primary mb-3">
+                    <h3 class="fw-bold text-p1 mb-3">
                         Scholarships at SGT University
                     </h3>
 
@@ -1150,7 +1156,7 @@
     <section class="recruiters-section py-5">
         <!-- FULL WIDTH HEADING FOR MOBILE -->
         <div class="col-12 d-lg-none text-center">
-            <h2 class="recruiter-heading text-primary mb-4">
+            <h2 class="recruiter-heading text-p1 mb-4">
                 Top Recruiters Are Ready for You
             </h2>
         </div>
@@ -1159,7 +1165,7 @@
 
                 <!-- LEFT SIDE CONTENT -->
                 <div class="col-lg-4">
-                    <h2 class="recruiter-heading text-primary mb-4 d-none d-lg-block">
+                    <h2 class="recruiter-heading text-p1 mb-4 d-none d-lg-block">
                         Top Recruiters<br>visiting<br>SGT University
                     </h2>
 
@@ -1306,7 +1312,7 @@
             <!-- Section Heading -->
             <div class="row mb-4">
                 <div class="col-12">
-                    <h2 class="fw-bold text-primary">
+                    <h2 class="fw-bold text-p1">
                         Key Features
                     </h2>
                 </div>
@@ -1413,7 +1419,7 @@
         <div class="container text-center">
 
             <!-- Heading -->
-            <h2 class="fw-bold text-primary mb-4" style="text-align: left;">
+            <h2 class="fw-bold text-p1 mb-4" style="text-align: left;">
                 30+ International Collaboration
             </h2>
 
@@ -1431,7 +1437,7 @@
 
             <!-- Heading + Navigation -->
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h2 class="fw-bold text-primary mb-0">Student Testimonials</h2>
+                <h2 class="fw-bold text-p1 mb-0">Student Testimonials</h2>
                 <div class="testimonial-nav">
                     <div class="swiper-button-prev testimonial-prev"></div>
                     <div class="swiper-button-next testimonial-next"></div>
@@ -1523,8 +1529,8 @@
         <div class="container text-center">
 
             <!-- Heading -->
-            <h2 class="fw-bold text-primary mb-2">Admission Process</h2>
-            <p class="text-muted mb-4">
+            <h2 class="fw-bold text-p1 mb-2">Admission Process</h2>
+            <p class="text-black mb-4">
                 Your admission made simple—with guidance at every step.
             </p>
 
