--- a/index.html
+++ b/index.html
@@ -1003,13 +1003,18 @@
                 </div>
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2 stat-box">
-                    <h2 class="counter" data-target="30">0</h2>
+                    <h2 class="counter" data-target="27">0</h2>
                     <p>International Collaboration</p>
                 </div>
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2 stat-box">
                     <h2 class="counter" data-target="100">0</h2>
                     <p>Advanced Labs</p>
+                </div>
+
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 stat-box">
+                    <h2 class="counter" data-target="100" data-suffix="%">0</h2>
+                    <p>Placement Assistance</p>
                 </div>
 
             </div>
@@ -1027,14 +1032,26 @@
                         About SGT University
                     </h2>
 
-                    <p class="text-black mb-0">
-                        Accredited with an <strong>A+ grade by NAAC</strong>, SGT University is a distinguished
-                        institution committed to “Nurturing Future Leaders” through academic excellence,
-                        research, and industry-driven innovation. With <strong>19 faculties offering
-                            multidisciplinary programs</strong>, the university fosters entrepreneurship,
-                        groundbreaking research, and global collaborations. Many of its faculty members are
-                        recognised in <strong>Stanford University’s “Top 2% Scientists” list</strong>,
-                        reinforcing SGT University’s leadership in research and academics.
+                    <p class="text-black mb-0" style="text-align: justify;"> SGT University, accredited with an <strong>
+                            A+ grade</strong> by <strong>NAAC</strong>, is a
+                        distinguished institution of higher
+                        education, committed to
+                        “Nurturing Future Leaders” through academic excellence, research, and innovation. With 19
+                        faculties offering
+                        <strong>multidisciplinary</strong> programs, the university fosters entrepreneurship, global
+                        collaborations, and
+                        groundbreaking research.
+                        At SGT University, education goes beyond the classroom. Its state-of-the-art healthcare
+                        ecosystem includes the
+                        multi-speciality <strong>810+</strong> bed SGT Hospital and a <strong>100-bedded</strong>
+                        super-speciality
+                        Ayurveda hospital
+                        offering dedicated services
+                        through Panchakarma and Ksharasutra centers, a wellness center, and a fully functional herbal
+                        garden. Adding to its
+                        prestige, many of its faculty members are recognised in Stanford University’s <strong>“Top 2%
+                            Scientists”</strong> list, reinforcing SGT
+                        University’s leadership in research and academics.
                     </p>
                 </div>
 
@@ -1274,11 +1291,9 @@
                 <!-- ITEM 2 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="rank-box d-flex align-items-start gap-3">
-                        <img src="assets/img/IIRF.webp" alt="IIRF" class="rank-logo">
-                        <p class="mb-0"><strong>
-                                4 State Rank<br>
-                                19 Zone Rank<br>
-                                45 National Rank</strong>
+                        <img src="assets/img/outlook.webp" alt="Outlook Ranking" class="rank-logo">
+                        <p class="mb-0">
+                            <strong> 48 Ranked in India</strong>
                         </p>
                     </div>
                 </div>
@@ -1330,7 +1345,28 @@
                 <!-- ITEM 7 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="rank-box d-flex align-items-start gap-3">
-                        <img src="assets/img/outlook.webp" alt="Outlook Ranking" class="rank-logo">
+                        <img src="assets/img/IIRF.webp" alt="IIRF" class="rank-logo">
+                        <p class="mb-0"><strong>
+                                4 State Rank<br>
+                                19 Zone Rank<br>
+                                45 National Rank</strong>
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="rank-box d-flex align-items-start gap-3">
+                        <img src="assets/img/nabh.png" alt="Outlook Ranking" class="rank-logo">
+                        <p class="mb-0">
+                            <strong> 48 Ranked in India</strong>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="rank-box d-flex align-items-start gap-3">
+                        <img src="assets/img/NABL.png" alt="Outlook Ranking" class="rank-logo">
                         <p class="mb-0">
                             <strong> 48 Ranked in India</strong>
                         </p>
@@ -1650,7 +1686,7 @@
 
             <!-- Heading -->
             <h2 class="fw-bold text-p1 mb-4" style="text-align: left;">
-                30+ International Collaboration
+                27+ International Collaboration
             </h2>
 
             <!-- Logos Full Width Image -->
