--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         .rank-box {
             padding: 18px 16px;
             border-radius: 14px;
-            align-items: flex-start;
+            align-items: center;
             transition: all 0.3s ease;
         }
 
