--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,14 @@
                 </div> -->
 
                 <!-- Right -->
-                <a href="#" class="btn btn-p1 rounded-3 px-4 py-2">Apply Now</a>
+                <!-- <a href="#" class="btn btn-p1 rounded-3 px-4 py-2">Apply Now</a> -->
+                <!-- Left -->
+                <div class="d-flex align-items-center gap-3">
+                    <div class="text-center">
+                        <img src="assets/img/logo2.png" height="65" alt="SGT University">
+                    </div>
+                </div>
+
 
             </div>
         </div>
