--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             color: #134080;
         }
 
+
+
+
+        .text-p2 {
+            color: #ff7300;
+        }
+
         .btn-p1 {
             color: #fff;
             background-color: #134080;
@@ -60,7 +67,7 @@
             min-height: 680px;
             /* Safety for small laptops */
             padding: 180px 0 40px;
-            background: url("assets/img/Banner-image.webp") center / cover no-repeat;
+            background: url("assets/img/uni.jpg") center / cover no-repeat;
             position: relative;
             overflow: hidden;
         }
@@ -119,7 +126,7 @@
             }
 
             .form-placeholder {
-                height: 470px;
+                height: 540px;
                 margin-top: 30px;
             }
         }
@@ -131,7 +138,7 @@
             }
 
             .form-placeholder {
-                height: 360px;
+                height: 540px;
                 border-radius: 14px;
             }
 
@@ -984,6 +991,12 @@
             color: #134080;
             font-size: 22px;
         }
+
+        @media (max-width: 767px) {
+            .hero-row {
+                min-height: auto !important;
+            }
+        }
     </style>
 </head>
 
@@ -1058,9 +1071,9 @@
 
                     <!-- ADMISSION CTA -->
                     <div class="hero-cta">
-                        <h4 class="fw-bold mb-3 text-black">
+                        <!-- <h4 class="fw-bold mb-3 text-p2">
                             Admissions Open 2025–26
-                        </h4>
+                        </h4> -->
 
                         <a href="#" class="btn btn-p1 btn-lg">
                             Apply Today
@@ -1292,9 +1305,9 @@
     </section> -->
 
 
-    <section class="facultyShowcase-section py-6 position-relative">
+    <section class="facultyShowcase-section py-2 position-relative">
         <div class="container">
-            <div class="row align-items-center min-vh-75">
+            <div class="row align-items-start h-100 gx-5">
 
                 <!-- LEFT : TALL IMAGE SWIPER -->
                 <div class="col-lg-6 mb-5 mb-lg-0">
