--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             min-height: 680px;
             /* Safety for small laptops */
             padding: 180px 0 40px;
-            background: url("assets/img/uni.jpg") center / cover no-repeat;
+            background: url("assets/img/uni.webp") center / cover no-repeat;
             position: relative;
             overflow: hidden;
         }
@@ -76,9 +76,9 @@
             content: "";
             position: absolute;
             inset: 0;
-            background: linear-gradient(to bottom,
+            /* background: linear-gradient(to bottom,
                     rgba(255, 255, 255, 0.55),
-                    rgba(3, 3, 3, 0));
+                    rgba(3, 3, 3, 0)); */
         }
 
         .hero-section .container {
@@ -773,7 +773,7 @@
     </style>
     <style>
         .future-leaders-section {
-            min-height: 850px;
+            min-height: 500px;
             background: #ffffff;
             position: relative;
             overflow: hidden;
@@ -1022,7 +1022,7 @@
                 <!-- Left -->
                 <div class="d-flex align-items-center gap-3">
                     <div class="text-center">
-                        <img src="assets/img/logo2.png" height="65" alt="SGT University">
+                        <img src="assets/img/logo2.png" height="45" alt="SGT University">
                     </div>
                 </div>
 
@@ -1972,25 +1972,64 @@
 
                                 <!-- Image -->
                                 <div class="testimonial-img-wrapper">
-                                    <img src="assets/img/dr_divya_tayal_1.webp" class="testimonial-img"
-                                        alt="Rahul Sharma">
+                                    <img src="assets/img/Ankita-Raw.webp" class="testimonial-img"
+                                        alt="Ankita Raw, SGT University">
                                 </div>
 
                                 <!-- Text -->
                                 <div class="testimonial-text-wrapper">
-                                    <h5 class="fw-bold mb-2 text-white">Rahul Sharma</h5>
+                                    <h5 class="fw-bold mb-2 text-white">Ankita Raw, SGT University</h5>
                                     <p class="testimonial-text">
-                                        My vision came alive effortlessly. Their blend of casual and professional
-                                        approach"The
-                                        University opened up opportunities to explore and broaden my skills. I would
-                                        relish
-                                        serving my Alma Mater in any way. The learning environment motivates students to
-                                        push
-                                        boundaries. There are exchanges with international universities. I gained
-                                        perspectives
-                                        on global healthcare systems. SGT nurtures socially responsible leaders." made
-                                        the
-                                        process a breeze. Creativity flowed, and the results were beyond my expectations
+                                        "Earning my BBA degree from SGT University equipped me with both academic
+                                        knowledge and practical skills. The education
+                                        I received here has been instrumental in advancing my professional career."
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-row">
+
+                                <!-- Image -->
+                                <div class="testimonial-img-wrapper">
+                                    <img src="assets/img/Astha-Sharma.webp" class="testimonial-img"
+                                        alt="Astha Sharma, SGT University">
+                                </div>
+
+                                <!-- Text -->
+                                <div class="testimonial-text-wrapper">
+                                    <h5 class="fw-bold mb-2 text-white">Astha Sharma, SGT University</h5>
+                                    <p class="testimonial-text">
+                                        "The hands-on training, workshops, and campus life shaped my
+                                        career. I’m now thriving in the corporate world!"
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-row">
+
+                                <!-- Image -->
+                                <div class="testimonial-img-wrapper">
+                                    <img src="assets/img/Kajal-Punia.webp" class="testimonial-img"
+                                        alt="Kajal Punia, SGT University">
+                                </div>
+
+                                <!-- Text -->
+                                <div class="testimonial-text-wrapper">
+                                    <h5 class="fw-bold mb-2 text-white">Kajal Punia, SGT University</h5>
+                                    <p class="testimonial-text">
+                                        "Studying at SGT University was an enriching experience, filled with numerous
+                                        learning opportunities. I'm grateful to SGT
+                                        for helping me secure a position at AdmitKard with a package of 10 LPA."
                                     </p>
                                 </div>
 
@@ -2054,21 +2093,17 @@
         <!-- <img src="assets/img/Ellipse.svg" alt="Background Circle" class="bg-circle-img"> -->
 
         <!-- BUILDING IMAGE -->
-        <img src="assets/img/Footer-Building.webp" alt="University Building" class="building-img">
+        <img src="assets/img/Footer-Building.jpg" alt="University Building" class="building-img">
     </section>
 
     <footer class="sct-footer border-top">
-        <div class="container py-3">
+        <!-- <div class="container py-3">
 
             <div class="row align-items-center gy-3">
 
-                <!-- LEFT: LOGO + NAAC -->
                 <div class="col-lg-4 col-md-6 d-flex align-items-center gap-3">
                     <img src="assets/img/SGT Logo.svg" alt="SGT University" class="footer-logo">
-                    <!-- <img src="assets/img/naac-a-plus.svg" alt="NAAC A+" class="footer-naac"> -->
                 </div>
-
-                <!-- CENTER: CONTACT INFO -->
                 <div class="col-lg-5 col-md-6">
                     <ul class="footer-contact list-unstyled mb-0">
 
@@ -2093,7 +2128,6 @@
                     </ul>
                 </div>
 
-                <!-- RIGHT: SOCIAL ICONS -->
                 <div class="col-lg-3 text-lg-end text-md-start">
                     <div class="footer-social d-flex justify-content-lg-end gap-3">
 
@@ -2113,7 +2147,7 @@
 
             </div>
 
-        </div>
+        </div> -->
 
         <!-- COPYRIGHT -->
         <div class="footer-bottom text-center py-2">
