--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@
     </section> -->
 
 
-    <section class="facultyShowcase-section py-2 position-relative">
+    <section class="facultyShowcase-section py-5 position-relative">
         <div class="container">
             <div class="row align-items-start h-100 gx-5">
 
@@ -1443,6 +1443,9 @@
                         <!-- <a href="#" class="btn btn-primary mt-4">
                             View All Faculties →
                         </a> -->
+                        <a href="#" class="btn btn-p1 apply-btn">
+                            Apply Now
+                        </a>
 
                     </div>
                 </div>
@@ -1550,6 +1553,9 @@
                         </div>
 
                     </div>
+                    <a href="#" class="btn btn-p1 apply-btn">
+                        Apply Now
+                    </a>
                 </div>
 
 
@@ -2093,7 +2099,7 @@
         <!-- <img src="assets/img/Ellipse.svg" alt="Background Circle" class="bg-circle-img"> -->
 
         <!-- BUILDING IMAGE -->
-        <img src="assets/img/Footer-Building.jpg" alt="University Building" class="building-img">
+        <img src="assets/img/foot-building.png" alt="University Building" class="building-img">
     </section>
 
     <footer class="sct-footer border-top">
