--- a/index.html
+++ b/index.html
@@ -1971,6 +1971,31 @@
                         </div>
                     </div>
 
+                    <div class="swiper-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-row">
+
+                                <!-- Image -->
+                                <div class="testimonial-img-wrapper">
+                                    <img src="assets/img/vinay.jpeg" class="testimonial-img"
+                                        alt="Vinay Sharma, SGT University">
+                                </div>
+
+                                <!-- Text -->
+                                <div class="testimonial-text-wrapper">
+                                    <h5 class="fw-bold mb-2 text-white">Vinay Sharma, SGT University</h5>
+                                    <p class="testimonial-text">
+                                        "Thanks to my SGT campus placement, I started working. I also want to express my
+                                        gratitude to my engineering professors
+                                        for always encouraging me to work harder and for their assistance during this
+                                        journey."
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Slide 2 -->
                     <div class="swiper-slide">
                         <div class="testimonial-card">
