--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@
                             <img src="assets/img/theworld.webp" alt="Logo 4">
                         </div>
                         <div class="logo-box">
-                            <img src="assets/img/mhw_ranking_1x.webp" alt="Logo 5">
+                            <img src="assets/img/r.png" alt="Logo 5">
                         </div>
                         <div class="logo-box">
                             <img src="assets/img/outlook.webp" alt="Logo 6">
@@ -1860,7 +1860,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="rank-box d-flex gap-3">
                         <div class="rank-logo-box">
-                            <img src="assets/img/mhw_ranking_1x.webp" alt="MHW Ranking">
+                            <img src="assets/img/r.png" alt="MHW Ranking">
                         </div>
                         <p class="mb-0">
                             <strong>
